Change empty responses to status code 204
